src/objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>AccountReference__c</fullName>
        <description>Could be defined on the Customer mini page layout so that the Customer Reference will be displayed when the user hover over the Customer Name field. To be reviewed and determined by Echo during the playback.</description>
        <formula>CustomerName__r.AccountReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeBillingAddress__c</fullName>
        <description>Copied from the Alternative Billing Customer record</description>
        <formula>AlternativeBilling__r.BillingStreet  &amp;&apos; &apos;&amp; AlternativeBilling__r.BillingCity &amp;&apos; &apos;&amp; AlternativeBilling__r.BillingState &amp;&apos; &apos;&amp;  AlternativeBilling__r.BillingCountry &amp;&apos; &apos;&amp;  AlternativeBilling__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternative Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeBilling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Customer .</description>
        <label>Alternative Billing</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Alternative Billing)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillCalculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>18 Sep 2017, P Dixon - lookup to bill calculation request record to track whether a manual bill calculation has been requested</description>
        <label>Bill Calculation</label>
        <referenceTo>BillCalculation__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <description>Pre-populate the field from Billing Address on Customer. Allow the user to overwrite.</description>
        <label>Billing Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <description>This field differentiate the frequency of Billing life cycle.</description>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Six Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>Roll Up from Service End Date (MAX)</description>
        <label>Contract End Date</label>
        <summarizedField>Service__c.ServiceEndDate__c</summarizedField>
        <summaryForeignKey>Service__c.Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ContractGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Group</label>
        <referenceTo>ContractGroup__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>Roll Up from Service Start Date (MIN)</description>
        <label>Contract Start Date</label>
        <summarizedField>Service__c.ServiceStartDate__c</summarizedField>
        <summaryForeignKey>Service__c.Contract__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CurrentPaymentPlanType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Payment Plan Type</label>
        <referenceTo>PaymentPlanType__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Customer</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DebtRecoveryProfile__c</fullName>
        <label>Debt Recovery Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Standard HH Debt Recovery Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard NHH Debt Recovery Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Contract End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastBillCalculationDate__c</fullName>
        <description>Updated by the Bill Date of the last bill. Hide from page layout. Used for calculation only.</description>
        <label>Last Bill Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NoForwardingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Forwarding Address</description>
        <label>No Forwarding Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used for allocating different system calendars, may also be used for splitting DD files.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Contract Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TODAY()&lt; ContractStartDate__c ,&apos;Not Started&apos;, 
IF(OR(AND(TODAY()&gt;=ContractStartDate__c,ISBLANK( ContractEndDate__c )), AND(ContractStartDate__c&lt;=TODAY(),TODAY()&lt;=ContractEndDate__c)) ,&apos;Active&apos;, 
IF(AND(TODAY()&gt;ContractEndDate__c, CustomerName__r.TotalLedgerAmount__c &gt;0), &apos;Inactive(with Debt)&apos;,  
IF(AND(TODAY()&gt;ContractEndDate__c, CustomerName__r.TotalLedgerAmount__c =0), &apos;Inactive(no Debt)&apos;,&apos;Inactive(with Credit)&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_temp__c</fullName>
        <label>Status_temp</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive with Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive(no debt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive(with credit)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseAlternativeAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used for Use Alternative Address.</description>
        <label>Use Alternative Address</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CON-{00000000}</displayFormat>
        <label>Contract Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>